base/dev-deployment-scripts/ingress-product.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: istio
    argocd.argoproj.io/sync-wave: "6"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: product-service
            port: 
              number: 80
